<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/valueHeader"
        android:layout_width="100dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/valueHeader"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/sequenceHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/valueHeader"
        android:layout_toRightOf="@id/valueHeader"
        android:layout_alignParentTop="true"
        android:text="@string/sequence"
        android:textSize="20sp"/>

    <ListView
        android:id="@+id/valueLine"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/valueHeader"
        android:layout_alignParentBottom="false"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="12sp" />


    <ListView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/listview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sequenceHeader"
        android:layout_alignParentBottom="false"
        android:layout_toEndOf="@id/valueLine"
        android:layout_toRightOf="@id/valueLine"/>

    <Button
        android:id="@+id/buttonMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/listview"
        android:text="@string/button_mail"
        android:onClick="createMail" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/listview"
        android:layout_toEndOf="@id/buttonMail"
        android:layout_toRightOf="@id/buttonMail"
        android:text="@string/button_new"
        android:onClick="newDecision" />

</RelativeLayout>
